--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,3 +1,5 @@
+@import '../res/fonts/stylesheet.css';
+
 html{
     scroll-behavior: smooth;
 
@@ -117,8 +119,7 @@ body{
 
 
 .font-def{
-    font-family:Roboto Condensed,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+    font-family:RBTO;
 }
 
 #nav-bar{
