--- a/public/css/home.css
+++ b/public/css/home.css
@@ -39,9 +39,14 @@ body{
     .tp-text{
         font-size: 1.4em!important;
     }
+
+    .tp-heading{
+        min-width: 200px !important;
+        max-width: 201px;
+    }
     
 }
-@media (max-width:620px) {
+@media (orientation:portrait) and (max-width:620px) {
     .text-1_8x1{
         font-size: 1.8em;
     }
@@ -50,17 +55,30 @@ body{
         font-size: 1.4em!important;
     }
     .two-box-panel{
+        width:100%;
         grid-template-rows: auto auto!important;
         grid-template-columns: none!important;
         
     }
-    .tp-heading{
-        width: 100%;
-        max-width: none!important;
+    .tp-heading-right,.tp-heading-left{
+        
+        max-width: none!important;        
+        /* padding:auto; */
         height: 3em;
         border-bottom: 1px solid grey!important;
         border-right:none!important;
+        border-left:none!important;
+        grid-row: 1;
     }
+    
+    .input-bars{
+        width: 90%!important;
+    }
+    #mail{
+        height: auto!important;
+        border: none!important;
+    }
+
     .panel_5x5{
         min-height: 400px !important;;
     }
@@ -183,7 +201,6 @@ body{
 }
 .two-box-panel{
     display: grid;
-    grid-template-columns: 1fr auto;
     grid-template-rows: none;
     column-gap: 1px;
     cursor: default;
@@ -191,18 +208,102 @@ body{
     
 }
 
+.text-head{
+    grid-template-columns: 3fr 1fr;
+}
+.head-text{
+    grid-template-columns: 1fr 3fr;
+}
+
 .tp-heading{
-    min-width: 200px;
-    max-width: 500px;
+    min-width: 300px;
+}
+
+.tp-heading-right{
+    
     border-right: 1px solid grey;
     border-bottom: 0px;
 }
+.tp-heading-left{
+    
+    border-left: 1px solid grey;
+    border-bottom: 0px;
+}
+
+#separator{
+    height:50px;
+    background-color: rgb(50, 184, 199);
+}
+
 .tp-text{
     min-width: 200px;
     
     display:flex;
     flex-wrap: wrap;
-    padding: 15%;
+    padding: 10%;
+    transition: all 100ms ease-in-out;
     /* text-align: center; */
+}
+.tp-text:hover{
+    transform: scale(1.05);
+}
+.tp-text-no-zoom{
+    min-width: 200px;
+    
+    display:flex;
+    flex-wrap: wrap;
+    padding: 10%;
+    /* text-align: center; */
+}
 
+form{
+    width:100%;
+    height: 100%;
+}
+.input-label{
+    height:100px;
+    transition: all 100ms ease-in-out;
+}
+
+.input-label:hover{
+    transform: scale(1.05);
+}
+
+.input-bars{
+    background-color: rgb(215, 224, 225);
+    width:70%;
+    min-width: 200px;
+    font-family:open sans, sans-serif;
+    min-height:2em;
+    font-size: 1rem;
+    font-weight: bold;
+    color:rgb(42, 40, 39);
+    border-radius: 5px;
+}
+#name{
+    background-image: url('../res/img/user.png');
+    background-size: 20px;
+    background-position: 5px center;
+    background-repeat: no-repeat;
+    padding-left: 30px;
+    overflow-wrap: break-word;
+
+}
+
+#email{
+    background-image: url('../res/img/mail.png');
+    background-size: 20px;
+    background-position: 5px center;
+    background-repeat: no-repeat;
+    padding-left: 30px;
+
+}
+#message{
+    color: black;
+    align-content: center;
+    padding: 5px 15px;
+    height: 5em;
+}
+#mail{
+    border: none;
 }
