--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,17 +1,22 @@
 @import '../res/fonts/stylesheet.css';
 
+:root{
+    --bg:rgb(50, 184, 199);
+}
+
 html{
     scroll-behavior: smooth;
 
 }
 body{
     
-    background-color: rgb(50, 184, 199);
-
+    background-color: var(--bg);
+    margin:10px 3px ;
+    padding: auto;
 }
 
 .blue_panel{
-    background-color: rgb(50, 184, 199);
+    background-color: var(--bg);
     color:white;
     
     
@@ -232,7 +237,8 @@ body{
 
 #separator{
     height:50px;
-    background-color: rgb(50, 184, 199);
+    background-color: var(--bg);
+
 }
 
 .tp-text{
@@ -259,6 +265,8 @@ body{
 form{
     width:100%;
     height: 100%;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1.5fr auto;
 }
 .input-label{
     height:100px;
@@ -289,6 +297,10 @@ form{
     overflow-wrap: break-word;
 
 }
+#subject{
+    padding-left: 15px;
+
+}
 
 #email{
     background-image: url('../res/img/mail.png');
@@ -298,12 +310,33 @@ form{
     padding-left: 30px;
 
 }
+
 #message{
     color: black;
     align-content: center;
     padding: 5px 15px;
-    height: 5em;
+    font-weight: normal;
+    background-color: transparent;
+
 }
 #mail{
     border: none;
+}
+#submit-button >button{
+    width: 130px;
+    height: 40px;
+    padding-right: 30px;
+    background-color:var(--bg);
+    color:white;
+    font-family: RBTO;
+    font-weight: bold;
+    border: 1px gray solid;
+    border-radius: 3px;
+    transition: all 100ms ease;
+}
+#submit-button >button:hover{
+    transform: scale(1.05);
+}
+#submit-button > button:active{
+    transform: scale(0.95);
 }
