--- a/public/css/home.css
+++ b/public/css/home.css
@@ -333,6 +333,11 @@ form{
     border: 1px gray solid;
     border-radius: 3px;
     transition: all 100ms ease;
+    background-image: url('../res/img/send.png');
+    background-size: 25px;
+    background-repeat: no-repeat;
+    background-position: 90px;
+    align-items: center;
 }
 #submit-button >button:hover{
     transform: scale(1.05);
